tests/sema/golden/03_binop_mismatch.out
tests/sema/bad/03_binop_mismatch.sg:3:1: error: let initializer: type mismatch (int vs float)
  let c:int = a + b;
  ^
